fix footer spacings

--- a/src/sass/deferred/_page.scss
+++ b/src/sass/deferred/_page.scss
@@ -33,9 +33,16 @@
         height: 125px;
         background-color: white;
     }
-    spacer,a {
-        flex: 1 1 0;
+
+    a + divider + a {
+        flex: none;
     }
+    
+    spacer, divider + a {
+            flex: 1 1 0;
+    }
+
+    
 }
 
 .page-hero {
